--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -160,6 +160,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
   list-style: none;
+  font-family: IcoFont;
 }
 
 .nav-menu > ul {
@@ -176,14 +177,14 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   position: relative;
   color: #222222;
-  transition: 0.3s;
+  /* transition: 0.3s; */
   font-size: 15px;
   font-weight: 600;
   padding: 0 3px;
   font-family: "Open Sans", sans-serif;
 }
 
-.nav-menu > ul > li > a:before {
+.nav-menu > ul > li > Link:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -195,29 +196,11 @@ h1, h2, h3, h4, h5, h6 {
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
 }
-
-.nav-menu a:hover:before, .nav-menu li:hover > a:before, .nav-menu .active > a:before {
-  visibility: visible;
-  width: 100%;
+.nav-menu li .active {
+  border-bottom: 2px solid white;
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #106eea;
-}
 
-.nav-menu .drop-down ul {
-  display: block;
-  position: absolute;
-  left: 26px;
-  top: calc(100% + 30px);
-  z-index: 99;
-  opacity: 0;
-  visibility: hidden;
-  padding: 10px 0;
-  background: #fff;
-  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-  transition: 0.3s;
-}
 
 .nav-menu .drop-down:hover > ul {
   opacity: 1;
@@ -333,7 +316,7 @@ h1, h2, h3, h4, h5, h6 {
   outline: none;
 }
 
-.mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
+.mobile-nav a:hover, li.active > a, .mobile-nav li:hover > a {
   color: #fff;
   text-decoration: none;
 }
