--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -1680,4 +1680,24 @@ section {
     text-align: center;
     padding: 2px 0;
   }
+}      
+
+.login .modal-dialog {
+  border-radius: 0;
+  top: 30%;
+}
+.modal-dialog{
+  vertical-align: middle;
+}
+@media screen and (min-width:768px){
+  .login .modal-dialog{
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    width: 100%;
+    height: 100%;
+  }
+}
+.modal-content {
+    border-radius: 0;
 }
