--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -837,6 +837,8 @@ section {
   }
 }      
 
+
+/* Login and sign up */
 .login .modal-dialog {
   border-radius: 0;
   top: 30%;
@@ -854,5 +856,49 @@ section {
   }
 }
 .modal-content {
-    border-radius: 0;
+    border-radius: 15px;
+}
+.auth-inner {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+.auth-inner {
+  width: 100%;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  transition: all .3s;
+}
+
+.auth-inner .form-control:focus {
+  border-color: #167bff;
+  box-shadow: none;
+}
+
+.auth-inner h3 {
+  text-align: center;
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+
+.custom-control-label {
+  font-weight: 400;
+}
+
+.forgot-password,
+.forgot-password a {
+  text-align: right;
+  font-size: 13px;
+  padding-top: 10px;
+  color: #7f7d7d;
+  margin: 0;
+}
+
+.forgot-password a {
+  color: #167bff;
 }
