--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -851,13 +851,9 @@ section {
 .modal-dialog{
   vertical-align: middle;
 }
-@media screen and (min-width:768px){
-  .login .modal-dialog{
-    position: absolute;
-    top: 20%;
-    left: 30%;
-    width: 100%;
-    height: 100%;
+@media screen and (max-width:768px){
+  .modal-body{
+    padding: 40px 40px !important;
   }
 }
 .modal-content {
