--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -839,32 +839,37 @@ section {
 
 
 /* Login and sign up */
-.modal  {
+/* .modal  {
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-}
-.modal-dialog {
+  font-family: sans-serif,'Oswald','Segoe UI'!important;
+} */
+/* .modal-dialog {
   width: 100% !important;
-
-}
-.modal-dialog{
-  vertical-align: middle;
-}
+} */
 @media screen and (max-width:768px){
   .modal-body{
     padding: 40px 40px !important;
   }
+  .modal {
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  .modal-dialog {
+    width: 100% !important;
+  }
 }
 .modal-content {
-    border-radius: 15px;
+  border-radius: 0px !important;
 }
-.auth-inner {
+/* .auth-inner {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: left;
-}
+} */
 .auth-inner {
   width: 100%;
   margin: auto;
@@ -878,13 +883,6 @@ section {
 .auth-inner .form-control:focus {
   border-color: #167bff;
   box-shadow: none;
-}
-
-.auth-inner h3 {
-  text-align: center;
-  margin: 0;
-  line-height: 1;
-  padding-bottom: 20px;
 }
 
 .custom-control-label {
@@ -904,4 +902,51 @@ section {
 }
 .forgot-password a {
   color: #167bff;
+}
+#loginSignUp .form-control {
+	border-radius: 3px;
+	background-color: rgba(0, 0, 0, 0.055);
+	box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset;
+}
+#loginSignUp .form-control:hover {
+	background-color: rgba(0, 0, 0, .16);
+}
+#loginSignUp .form-control:focus {
+	box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset;
+	background-color: rgba(0, 0, 0, 0.23);
+}
+#loginSignUp .nav-tabs a {
+	background-color: #e9ebee;
+	color: #888;
+	border-radius: 0px;
+}
+#loginSignUp .nav-tabs a:hover {
+	color:#555 !important;
+}
+#loginSignUp .nav-tabs a.active {
+	color: #000 !important;
+	background-color: white;
+}
+#loginSignUp .form-control  {
+	border-radius: 3px;
+	border: none;
+	color: #333333;
+	font-size: 16px;
+	height: 46px;
+	margin-bottom: 5px;
+	padding: 13px 12px;
+	width: 100%;
+}
+#loginSignUp select.form-control {
+	padding: 10px 12px;
+}
+#loginSignUp .form-group label {
+	font-size: 16px;
+}
+#loginSignUp .tab-content {
+	padding-left: 10px;
+	padding-right: 10px;
+}
+#loginSignUp .modal-content ,#loginSignUp button {
+	border-radius: 0px;
 }
