--- a/frontend/src/Pages/MerchandiseStore/Logo/Logo.css
+++ b/frontend/src/Pages/MerchandiseStore/Logo/Logo.css
@@ -1,4 +1,4 @@
-.Logo {
+/* .Logo {
     color: #434141;
     font-size: 32px !important;
     line-height: 1;
@@ -15,8 +15,24 @@
     color: #c09a12;
 }
 
+.Logo img {
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width: 576px) {
     .Logo {
         font-size: 24px !important;
     }
+} */
+
+.Logo {
+    width: 165px;
+    height: 46px;
+    /* background-color: black; */
+}
+
+.Logo img {
+    height: 100%;
+    width: 100%;
 }
