--- a/frontend/src/Pages/MerchandiseStore/ProdDesc/ProdDesc.css
+++ b/frontend/src/Pages/MerchandiseStore/ProdDesc/ProdDesc.css
@@ -6,6 +6,19 @@
     margin: 0;
 }
 
+.ProductImgContainer {
+    display: grid;
+    place-items: center;
+    height: fit-content;
+    width: 500px;
+    margin: 0 auto;
+}
+
+.ProdDesc .ProductImg {
+    width: 100%;
+    height: auto;
+}
+
 .ProdDesc .Header{
     height: 100px;
     padding: 0;
@@ -18,13 +31,6 @@
 
 .ProdDesc h6 a:hover {
     color: inherit;
-}
-
-.ProdDesc .ProductImg {
-    width: 80%;
-    height: auto;
-    display: block;
-    margin: 0;
 }
 
 .ProdDesc .Description {
@@ -89,6 +95,7 @@
     flex-direction: column;
     align-items: center;
     width: 80px;
+    margin-right: 20px;
 }
 
 .ProdDesc .ProductImages img {
@@ -137,8 +144,18 @@
         justify-content: flex-end; 
         padding-bottom: 50px;
         width: 80px;
+        margin-right: 5px;
+        /* margin-left: 10px; */
     }
 
+    .Product_Display {
+        justify-content: space-evenly;
+    }
+
+    .ProductImgContainer {
+        transform: translateX(-30px);
+        margin: 0;
+    }
 }
 
 @media (max-width: 768px) {
@@ -153,6 +170,11 @@
 
     .ProdDesc .ProductImages {
         padding-bottom: 35px;
+    }
+
+    .ProductImgContainer {
+        height: 400px;
+        width: 400px;
     }
 }
 
@@ -175,12 +197,18 @@
     }
 
     .ProdDesc .ProductImages {
-        padding-bottom: 20px;
+        padding-bottom: 10px;
+        margin-right: 14px;
     }
 
     .ProdDesc .ProductImages img {
         width: 45px;
         height: 45px;
+    }
+
+    .ProductImgContainer {
+        height: 250px;
+        width: 250px;
     }
 }
 
