--- a/frontend/src/Pages/MerchandiseStore/ResponsiveTexts.css
+++ b/frontend/src/Pages/MerchandiseStore/ResponsiveTexts.css
@@ -49,5 +49,13 @@
         font-size: 22px !important;
     }
 
+    .text-sm-24 {
+        font-size: 24px !important;
+    }
+
+    .text-sm-26 {
+        font-size: 26px !important;
+    }
+
 
 }
